--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,44 +84,45 @@ jobs:
         with:
           name: osx-x64
           path: cimgui/build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
-
-      - name: Upload Definitions Json File
+          
+      - name: Upload win-x64 ${{ github.event.inputs.ReleaseType || 'Release' }}
         uses: actions/upload-artifact@v3
         if: matrix.os == 'windows-latest'
         with:
-          name: JsonFiles
-          path: cimgui\generator\output\definitions.json
+          name: win-x64
+          path: cimnodes\build\x64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
 
-      - name: Upload structs_and_enums Json File
+      - name: Upload win-x86 ${{ github.event.inputs.ReleaseType || 'Release' }}
         uses: actions/upload-artifact@v3
         if: matrix.os == 'windows-latest'
         with:
-          name: JsonFiles
-          path: cimgui\generator\output\structs_and_enums.json
+          name: win-x86
+          path: cimnodes\build\x86\${{ github.event.inputs.ReleaseType || 'Release' }}\*
 
-  CreateReleaseOnTagCreate:
-    runs-on: ubuntu-latest
-    needs: [Build]
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-
-      - name: Rename win-x64 and win-x86 artifacts
-        run: |
-          mv win-x64/cimgui.dll win-x64/cimgui.win-x64.dll
-          mv win-x86/cimgui.dll win-x86/cimgui.win-x86.dll
-          mv win-arm64/cimgui.dll win-arm64/cimgui.win-arm64.dll
-          mv win-arm/cimgui.dll win-arm/cimgui.win-arm.dll
-
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Upload win-arm ${{ github.event.inputs.ReleaseType || 'Release' }}
+        uses: actions/upload-artifact@v3
+        if: matrix.os == 'windows-latest'
         with:
-          files: |
-            win-x64/cimgui.win-x64.dll
-            win-x86/cimgui.win-x86.dll
-            win-arm64/cimgui.win-arm64.dll
-            win-arm/cimgui.win-arm.dll
-            JsonFiles/*
-            linux-x64/cimgui.so
-            osx-x64/cimgui.dylib
+          name: win-arm
+          path: cimnodes\build\ARM\${{ github.event.inputs.ReleaseType || 'Release' }}\*
+
+      - name: Upload win-arm64 ${{ github.event.inputs.ReleaseType || 'Release' }}
+        uses: actions/upload-artifact@v3
+        if: matrix.os == 'windows-latest'
+        with:
+          name: win-arm64
+          path: cimnodes\build\ARM64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
+
+      - name: Upload Linux ${{ github.event.inputs.ReleaseType || 'Release' }}
+        uses: actions/upload-artifact@v3
+        if: matrix.os == 'ubuntu-latest'
+        with:
+          name: linux-x64
+          path: cimnodes/build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
+
+      - name: Upload MacOS ${{ github.event.inputs.ReleaseType || 'Release' }}
+        uses: actions/upload-artifact@v3
+        if: matrix.os == 'macos-latest'
+        with:
+          name: osx-x64
+          path: cimnodes/build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
