--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = cimgui
 	url = https://github.com/cimgui/cimgui
 	branch = docking_inter
+[submodule "cimnodes"]
+	path = cimnodes
+	url = https://github.com/cimgui/cimnodes.git
