--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,81 +48,39 @@ jobs:
         if: matrix.os == 'windows-latest'
         with:
           name: win-x64
-          path: cimgui\build\x64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
+          path: build\x64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
 
       - name: Upload win-x86 ${{ github.event.inputs.ReleaseType || 'Release' }}
         uses: actions/upload-artifact@v3
         if: matrix.os == 'windows-latest'
         with:
           name: win-x86
-          path: cimgui\build\x86\${{ github.event.inputs.ReleaseType || 'Release' }}\*
+          path: build\x86\${{ github.event.inputs.ReleaseType || 'Release' }}\*
 
       - name: Upload win-arm ${{ github.event.inputs.ReleaseType || 'Release' }}
         uses: actions/upload-artifact@v3
         if: matrix.os == 'windows-latest'
         with:
           name: win-arm
-          path: cimgui\build\ARM\${{ github.event.inputs.ReleaseType || 'Release' }}\*
+          path: build\ARM\${{ github.event.inputs.ReleaseType || 'Release' }}\*
 
       - name: Upload win-arm64 ${{ github.event.inputs.ReleaseType || 'Release' }}
         uses: actions/upload-artifact@v3
         if: matrix.os == 'windows-latest'
         with:
           name: win-arm64
-          path: cimgui\build\ARM64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
+          path: build\ARM64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
 
       - name: Upload Linux ${{ github.event.inputs.ReleaseType || 'Release' }}
         uses: actions/upload-artifact@v3
         if: matrix.os == 'ubuntu-latest'
         with:
           name: linux-x64
-          path: cimgui/build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
+          path: build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
 
       - name: Upload MacOS ${{ github.event.inputs.ReleaseType || 'Release' }}
         uses: actions/upload-artifact@v3
         if: matrix.os == 'macos-latest'
         with:
           name: osx-x64
-          path: cimgui/build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
-          
-      - name: Upload win-x64 ${{ github.event.inputs.ReleaseType || 'Release' }}
-        uses: actions/upload-artifact@v3
-        if: matrix.os == 'windows-latest'
-        with:
-          name: win-x64
-          path: cimnodes\build\x64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
-
-      - name: Upload win-x86 ${{ github.event.inputs.ReleaseType || 'Release' }}
-        uses: actions/upload-artifact@v3
-        if: matrix.os == 'windows-latest'
-        with:
-          name: win-x86
-          path: cimnodes\build\x86\${{ github.event.inputs.ReleaseType || 'Release' }}\*
-
-      - name: Upload win-arm ${{ github.event.inputs.ReleaseType || 'Release' }}
-        uses: actions/upload-artifact@v3
-        if: matrix.os == 'windows-latest'
-        with:
-          name: win-arm
-          path: cimnodes\build\ARM\${{ github.event.inputs.ReleaseType || 'Release' }}\*
-
-      - name: Upload win-arm64 ${{ github.event.inputs.ReleaseType || 'Release' }}
-        uses: actions/upload-artifact@v3
-        if: matrix.os == 'windows-latest'
-        with:
-          name: win-arm64
-          path: cimnodes\build\ARM64\${{ github.event.inputs.ReleaseType || 'Release' }}\*
-
-      - name: Upload Linux ${{ github.event.inputs.ReleaseType || 'Release' }}
-        uses: actions/upload-artifact@v3
-        if: matrix.os == 'ubuntu-latest'
-        with:
-          name: linux-x64
-          path: cimnodes/build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
-
-      - name: Upload MacOS ${{ github.event.inputs.ReleaseType || 'Release' }}
-        uses: actions/upload-artifact@v3
-        if: matrix.os == 'macos-latest'
-        with:
-          name: osx-x64
-          path: cimnodes/build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
+          path: build/${{ github.event.inputs.ReleaseType || 'Release' }}/*
